# mwc-vin-decoder

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  example_carparts.txt
.github/workflows/: build.yml  release.yml
src/: main.rs
