[package]
name = "mwc-vin-decoder"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "MWC VIN Decoder"
publish = false

[dependencies]
byteorder = "1.5"
eframe = "0.33.3"
egui = "0.33.3"
image = "0.25.9"
rfd = "0.16.0"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
debug = false
panic = "abort"